<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shopActivities.LoginActivity"
    android:background="@color/background"
    >

    //logo
    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/applogo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="200dp"
        />

    //email input
    <EditText
        android:id="@+id/login_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_applogo"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="Email address"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="17dp"
        android:textStyle="bold"
        />

    //parola input
    <EditText
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email_input"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="17dp"
        android:textStyle="bold"
        />

    <RelativeLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_password_input"
        android:layout_marginTop="5dp">

        //remember me
        <com.rey.material.widget.CheckBox
            android:id="@+id/remember_me_chkb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Material.Drawable.CheckBox"
            android:text="Remember me"
            android:textColor="@color/colorPrimary"
            app:cbd_strokeColor = "@color/colorPrimary"
            android:gravity="center_vertical"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginStart="17dp"
            android:layout_alignParentStart="true"
            />

        //forget password
        <TextView
            android:id="@+id/forget_password_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="Forgot Password"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/remember_me_chkb"
            android:layout_centerVertical="true"
            android:layout_marginEnd="17dp"
            />
    </RelativeLayout>

    //login button
    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_layout_1"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:textAllCaps="false"
        android:textSize="18dp"
        android:text="Login"
        android:textColor="@color/white"
        />

    //admin
    <TextView
        android:id="@+id/admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/login_btn"
        android:text="I'm an admin"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="23dp"
        />

    //non-admin
    <TextView
        android:id="@+id/not_admin_panel_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/login_btn"
        android:text="I'm not an admin"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="25dp"
        android:visibility="invisible"
        />
</RelativeLayout>
</ScrollView>