...
        android:textSize="18dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        />

    <EditText
        android:id="@+id/email_account_reset"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/msg2"
        android:layout_marginTop="30dp"
...
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:hint="Email..."
        />

    <Button
        android:id="@+id/reset_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons"
        android:textColor="@color/white"
        android:text="Send new password"
        android:layout_alignParentBottom="true"/>
...
